--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="profile-grid">
           <img
             class="avatar-left"
-            src="assets/img/me.jpg"
+            src="assets/img/me.png"
             alt="me"
             loading="eager"
             decoding="async"
@@ -39,6 +39,17 @@
             </header>
 
             <nav class="links">
+              <a class="link" href="pages/about.html">
+                <span class="icon" aria-hidden="true">
+                  <svg viewBox="0 0 24 24" fill="currentColor">
+                    <path
+                      d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20Zm0 4.7a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 0 1 0-2.5ZM10.75 11a.75.75 0 0 1 .75-.75h.5a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-.75.75h-.5a.75.75 0 0 1-.75-.75v-6Z"
+                    />
+                  </svg>
+                </span>
+                <span>About</span>
+              </a>
+
               <a
                 class="link"
                 href="https://github.com/AntoineROYERB"
