--- a/index.html
+++ b/index.html
@@ -23,83 +23,82 @@
   <body>
     <main class="page">
       <section class="profile">
-        <div class="profile-grid">
-          <img
-            class="avatar-left"
-            src="assets/img/me.png"
-            alt="me"
-            loading="eager"
-            decoding="async"
-          />
+        <img
+          class="avatar"
+          src="assets/img/me.png"
+          alt="Antoine Royer Bournelle"
+          loading="eager"
+          decoding="async"
+        />
 
-          <div class="profile-content">
-            <header class="profile-header">
-              <h1 class="name">Antoine ROYER BOURNELLE</h1>
-              <p class="tagline">Data engineer</p>
-            </header>
+        <header class="profile-header">
+          <h1 class="name">Antoine ROYER BOURNELLE</h1>
+          <p class="tagline">Data engineer</p>
+        </header>
 
-            <nav class="links">
-              <a class="link" href="pages/about.html">
-                <span class="icon" aria-hidden="true">
-                  <svg viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                      d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20Zm0 4.7a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 0 1 0-2.5ZM10.75 11a.75.75 0 0 1 .75-.75h.5a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-.75.75h-.5a.75.75 0 0 1-.75-.75v-6Z"
-                    />
-                  </svg>
-                </span>
-                <span>About</span>
-              </a>
-
-              <a
-                class="link"
-                href="https://github.com/AntoineROYERB"
-                target="_blank"
-                rel="noreferrer noopener"
-              >
-                <span class="icon" aria-hidden="true">
-                  <svg viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                      d="M12 2a10 10 0 0 0-3.16 19.49c.5.09.68-.21.68-.48v-1.7c-2.77.6-3.35-1.17-3.35-1.17-.45-1.14-1.1-1.45-1.1-1.45-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.34 1.08 2.91.83.09-.64.35-1.08.64-1.33-2.21-.25-4.54-1.11-4.54-4.94 0-1.09.39-1.98 1.02-2.68-.1-.25-.44-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.5 9.5 0 0 1 12 6.8c.85 0 1.71.11 2.5.33 1.9-1.29 2.74-1.02 2.74-1.02.55 1.38.2 2.4.1 2.65.64.7 1.02 1.59 1.02 2.68 0 3.84-2.33 4.69-4.55 4.94.36.31.68.92.68 1.85v2.74c0 .27.18.58.69.48A10 10 0 0 0 12 2Z"
-                    />
-                  </svg>
-                </span>
-                <span>GitHub</span>
-              </a>
-
-              <a
-                class="link"
-                href="https://www.linkedin.com/in/antoine-royer-bournelle/"
-                target="_blank"
-                rel="noreferrer noopener"
-              >
-                <span class="icon" aria-hidden="true">
-                  <svg viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                      d="M4.98 3.5A2.5 2.5 0 1 1 5 8.5a2.5 2.5 0 0 1-.02-5ZM3 9h4v12H3V9Zm7 0h3.8v1.64h.05c.53-1 1.82-2.06 3.75-2.06C21.4 8.58 22 11.02 22 14.2V21h-4v-6.04c0-1.44-.03-3.3-2.02-3.3-2.02 0-2.33 1.58-2.33 3.2V21h-4V9Z"
-                    />
-                  </svg>
-                </span>
-                <span>LinkedIn</span>
-              </a>
-
-              <a
-                class="link"
-                href="assets/docs/CV.pdf"
-                target="_blank"
-                rel="noreferrer"
-              >
-                <span class="icon" aria-hidden="true">
-                  <svg viewBox="0 0 24 24" fill="currentColor">
-                    <path
-                      d="M6 2h9l5 5v15a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Zm8 1.5V8h4.5L14 3.5ZM7.5 13.5h9v1.5h-9v-1.5Zm0 3h9V18h-9v-1.5Zm0-6h6V12h-6v-1.5Z"
-                    />
-                  </svg>
-                </span>
-                <span>Resume</span>
-              </a>
-            </nav>
-          </div>
+        <div class="prose">
+          <p>
+            Hi! I'm Antoine, a grown-up in Paris, France, and now I'm working as
+            a data engineer in a company based in Barcelona focused on the
+            Higher education and research innovation sector.
+          </p>
+          <p>
+            I'm mainly designing and maintaining ETL pipelines, building BI and
+            supporting analytics teams. I also have a strong background in
+            computer science and web development.
+          </p>
+          <p>I'm playing daily on chess.com and have sporty habits :)</p>
         </div>
+
+        <nav class="links">
+          <a
+            class="link"
+            href="https://github.com/AntoineROYERB"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            <span class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path
+                  d="M12 2a10 10 0 0 0-3.16 19.49c.5.09.68-.21.68-.48v-1.7c-2.77.6-3.35-1.17-3.35-1.17-.45-1.14-1.1-1.45-1.1-1.45-.9-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.52 2.34 1.08 2.91.83.09-.64.35-1.08.64-1.33-2.21-.25-4.54-1.11-4.54-4.94 0-1.09.39-1.98 1.02-2.68-.1-.25-.44-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.5 9.5 0 0 1 12 6.8c.85 0 1.71.11 2.5.33 1.9-1.29 2.74-1.02 2.74-1.02.55 1.38.2 2.4.1 2.65.64.7 1.02 1.59 1.02 2.68 0 3.84-2.33 4.69-4.55 4.94.36.31.68.92.68 1.85v2.74c0 .27.18.58.69.48A10 10 0 0 0 12 2Z"
+                />
+              </svg>
+            </span>
+            <span>GitHub</span>
+          </a>
+
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/antoine-royer-bournelle/"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
+            <span class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path
+                  d="M4.98 3.5A2.5 2.5 0 1 1 5 8.5a2.5 2.5 0 0 1-.02-5ZM3 9h4v12H3V9Zm7 0h3.8v1.64h.05c.53-1 1.82-2.06 3.75-2.06C21.4 8.58 22 11.02 22 14.2V21h-4v-6.04c0-1.44-.03-3.3-2.02-3.3-2.02 0-2.33 1.58-2.33 3.2V21h-4V9Z"
+                />
+              </svg>
+            </span>
+            <span>LinkedIn</span>
+          </a>
+
+          <a
+            class="link"
+            href="assets/docs/CV.pdf"
+            target="_blank"
+            rel="noreferrer"
+          >
+            <span class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path
+                  d="M6 2h9l5 5v15a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Zm8 1.5V8h4.5L14 3.5ZM7.5 13.5h9v1.5h-9v-1.5Zm0 3h9V18h-9v-1.5Zm0-6h6V12h-6v-1.5Z"
+                />
+              </svg>
+            </span>
+            <span>Resume</span>
+          </a>
+        </nav>
       </section>
     </main>
   </body>
